{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 27,
  "lineage": "bae0da46-3e80-956f-07fb-2a9d57ef1ab3",
  "resources": [
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:828299057084:loadbalancer/app/Terraform-production-alb/84bcc8d4d7361b1b",
            "arn_suffix": "app/Terraform-production-alb/84bcc8d4d7361b1b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Terraform-production-alb-897039645.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:828299057084:loadbalancer/app/Terraform-production-alb/84bcc8d4d7361b1b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-production-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b52bfff5234bc3ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b5cb0eb68f743de"
              },
              {
                "subnet_id": "subnet-0a2f11599b4aaf7f9"
              }
            ],
            "subnets": [
              "subnet-00b5cb0eb68f743de",
              "subnet-0a2f11599b4aaf7f9"
            ],
            "tags": {
              "Environment": "production",
              "Name": "Terraform-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-alb"
            },
            "vpc_id": "vpc-0e4776104d32d73f0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs_cluster.aws_security_group.load_balancer_security_group",
            "module.ecs_cluster.aws_subnet.public",
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:internet-gateway/igw-045ed5df37374be4e",
            "id": "igw-045ed5df37374be4e",
            "owner_id": "828299057084",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-igw"
            },
            "vpc_id": "vpc-0e4776104d32d73f0"
          },
          "dependencies": [
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:828299057084:listener/app/Terraform-production-alb/84bcc8d4d7361b1b/36db1e9258627fa7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:828299057084:targetgroup/Terraform-production-tg/ddf6d5e91bf65fac",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:828299057084:listener/app/Terraform-production-alb/84bcc8d4d7361b1b/36db1e9258627fa7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:828299057084:loadbalancer/app/Terraform-production-alb/84bcc8d4d7361b1b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_cluster.aws_alb.application_load_balancer",
            "module.ecs_cluster.aws_lb_target_group.target_group",
            "module.ecs_cluster.aws_security_group.load_balancer_security_group",
            "module.ecs_cluster.aws_subnet.public",
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:828299057084:targetgroup/Terraform-production-tg/ddf6d5e91bf65fac",
            "arn_suffix": "targetgroup/Terraform-production-tg/ddf6d5e91bf65fac",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/v1/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:828299057084:targetgroup/Terraform-production-tg/ddf6d5e91bf65fac",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Terraform-production-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Terraform-lb-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-lb-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e4776104d32d73f0"
          },
          "dependencies": [
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-045ed5df37374be4e",
            "id": "r-rtb-039d2cc2487d5321a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039d2cc2487d5321a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_cluster.aws_internet_gateway.aws-igw",
            "module.ecs_cluster.aws_route_table.public",
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:route-table/rtb-039d2cc2487d5321a",
            "id": "rtb-039d2cc2487d5321a",
            "owner_id": "828299057084",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "Terraform-routing-table-public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4776104d32d73f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa54d639bb00843a",
            "route_table_id": "rtb-039d2cc2487d5321a",
            "subnet_id": "subnet-00b5cb0eb68f743de"
          },
          "dependencies": [
            "module.ecs_cluster.aws_route_table.public",
            "module.ecs_cluster.aws_subnet.public",
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e0860b35bb15e13",
            "route_table_id": "rtb-039d2cc2487d5321a",
            "subnet_id": "subnet-0a2f11599b4aaf7f9"
          },
          "dependencies": [
            "module.ecs_cluster.aws_route_table.public",
            "module.ecs_cluster.aws_subnet.public",
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:security-group/sg-0b52bfff5234bc3ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b52bfff5234bc3ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221121055649305700000002",
            "name_prefix": "terraform-",
            "owner_id": "828299057084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Terraform-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4776104d32d73f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:security-group/sg-08fd2501d9d9abe84",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fd2501d9d9abe84",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0b52bfff5234bc3ad"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221121055654533000000003",
            "name_prefix": "terraform-",
            "owner_id": "828299057084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Terraform-service-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4776104d32d73f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_cluster.aws_security_group.load_balancer_security_group",
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:subnet/subnet-0b87c9788eb3fc102",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b87c9788eb3fc102",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "828299057084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-private-subnet-1"
            },
            "vpc_id": "vpc-0e4776104d32d73f0"
          },
          "dependencies": [
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:subnet/subnet-02cd598df21f06da6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cd598df21f06da6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "828299057084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-private-subnet-2"
            },
            "vpc_id": "vpc-0e4776104d32d73f0"
          },
          "dependencies": [
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:subnet/subnet-00b5cb0eb68f743de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b5cb0eb68f743de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "828299057084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-public-subnet-1"
            },
            "vpc_id": "vpc-0e4776104d32d73f0"
          },
          "dependencies": [
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:subnet/subnet-0a2f11599b4aaf7f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2f11599b4aaf7f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "828299057084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-public-subnet-2"
            },
            "vpc_id": "vpc-0e4776104d32d73f0"
          },
          "dependencies": [
            "module.ecs_cluster.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "module.ecs_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828299057084:vpc/vpc-0e4776104d32d73f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0e441a02f6075343b",
            "default_route_table_id": "rtb-07fbcfb2ae8106986",
            "default_security_group_id": "sg-07460d177f1a1fb15",
            "dhcp_options_id": "dopt-0e9b3c2546469fb14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e4776104d32d73f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07fbcfb2ae8106986",
            "owner_id": "828299057084",
            "tags": {
              "Environment": "production",
              "Name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}